Fixed featured project spacing

--- a/homepage.scss
+++ b/homepage.scss
@@ -7,9 +7,26 @@
 
 
 /*     List Formatting    */
-.notion-quote.bg-yellow .notion-collection-gallery, .notion-quote.bg-gray .notion-collection-gallery{
-  display: block;
-  padding: 0px;
+
+/* FEATURED */
+.notion-quote.bg-yellow {
+  .notion-collection-card{
+    box-shadow: 0 0 32px 0 rgba(100, 166, 200, 0.4) !important;
+  }
+  
+  .notion-collection-card:hover{
+    box-shadow: 0 0 32px 0 rgba(100, 166, 200, 0.55) !important;
+  }
+  
+}
+
+
+
+.notion-quote.bg-yellow, .notion-quote.bg-gray {
+  .notion-collection-gallery{
+    display: block;
+    padding: 0px;
+  }
 }
 
 .notion-collection-card{
@@ -147,16 +164,4 @@
     background: none !important;
     opacity: 1 !important;
     box-shadow: 0px 0px 32px 0 rgba(0, 0, 7, .1)!important;
-}
-
-
-.notion-quote.bg-yellow .notion-collection-card{
-  // border: 4px solid var(--color-text-blue);
-  // padding: 20px !important;
-  margin-bottom: 0px;
-  box-shadow: 0 0 32px 0 rgba(100, 166, 200, 0.4) !important;
-}
-
-.notion-quote.bg-yellow .notion-collection-card:hover{
-  box-shadow: 0 0 32px 0 rgba(100, 166, 200, 0.55) !important;
 }
